[package]
name = "cmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pulldown-cmark = "0.9.2"
wasm-bindgen = "0.2.83"
deno_bindgen = "0.7.0"
serde = { version = "1", features = ["derive"] }
once_cell = "1.12.0"
tree-sitter-highlight = "0.20.1"
tree-sitter = "0.20.6"
tracing = "0.1.35"
thiserror = "1.0.31"
eyre = "0.6.8"
slug = "0.1.4"
tree-sitter-c = "0.20.1"
tree-sitter-dockerfile = "0.1.0"
tree-sitter-go = "0.19.1"
tree-sitter-html = "0.19.0"
tree-sitter-javascript = "0.20.0"
tree-sitter-json = "0.19.0"
tree-sitter-python = "0.20.2"
tree-sitter-rust = "0.20.1"
tree-sitter-toml = "0.20.0"
tree-sitter-typescript = "0.20.1"


[lib]
name = "cmark"
crate-type = ["cdylib"]